=== NoNa ===
== Version 1.7 ==
Changelog: December 10, 2012
= Code =
* Fixed spacing issue in meta details if post has no tags
* Refactored `wp_nav_menu` support code

= CSS =

= Miscellaneous =

= Current Internet Browsers Reviewed =
* Apple Safari
* Firefox
* Google Chrome
* Internet Explorer
* Opera

/** ------------------------------------------------------------------------- */
== Version 1.6 ==
Changelog: July 10, 2012
= Code =
* Added `nona_wp_title` to be used with `wp_title` filter
* Removed deprecated function call to `add_custom_background`
* Removed deprecated function call to `get_theme_data`
* Updated post to post navigation in 'single.php'

= CSS =
* Miscellaneous minor style changes
* Styles for default widgets updated

= Internet Browsers Reviewed =
* Apple Safari v5.1.7
* Firefox v13.0.1
* Google Chrome v20.0
* Internet Explorer v9.0
* Opera v12.0

/** ------------------------------------------------------------------------- */
== Version 1.5 ==
Changelog: April 24, 2012
= Code =
* Added $args to `nona_login` function - adopted from BNS-Login plugin
* Added conditional check to only display website (and email) if exists, as well as only display biography if it exists
* Addressed deprecated function call to `add_custom_background`
* Addressed deprecated function calls to `get_theme_data`
* Make post edit link preceding character consistent across all theme templates

= CSS =
* Corrected various class names ... changed from 'bns-' to 'nona-'
* Form aesthetics improved

/** ------------------------------------------------------------------------- */
== Version 1.4 ==
Changelog: November 6, 2011
= Code =
* Added textdomain as needed to string functions
* Added previous and next post navigation in the `single.php` template
* Added `wp_link_pages` after every instance of `the_content`
* Added `description` parameter to `register_sidebar` definitions
* Removed `show_avatar` function - not used
* Removed `bns_menu` function - not used